# Adafruit_CircuitPython_WM8960

./: LICENSE  README.rst  README.rst.license  adafruit_wm8960.py  pyproject.toml  requirements.txt
adafruit_wm8960/: __init__.py  advanced.py
docs/: api-advanced.rst  api-advanced.rst.license  api.rst  conf.py  examples.rst  index.rst
examples/: wm8960_01_Volume.py  wm8960_02_INPUT2.py  wm8960_03_INPUT1.py  wm8960_04_Speaker.py  wm8960_05_Loopback.py  wm8960_06_3D_Enhance.py  wm8960_07_MicBias.py  wm8960_08_I2S_Passthrough.py  wm8960_09_I2S_Bluetooth.py  wm8960_10_AdcGain.py  wm8960_11_VolumePlotter.py  wm8960_12_AutomaticLevelControl.py  wm8960_13_DacGain.py  wm8960_14_ElectretMics.py  wm8960_15_VolumePlotter_MEMS_Mic_Differential.py  wm8960_3d_enhance.py  wm8960_I2SInOut.py  wm8960_automatic_level_control.py  wm8960_eighties_dystopia.py  wm8960_input.py  wm8960_simpletest.py
